Se agrego un detalle en la unidad 2 de calculo

--- a/4º Año/Calculo Numerico/Unidad 2/1. Repaso de Matrices.md
+++ b/4º Año/Calculo Numerico/Unidad 2/1. Repaso de Matrices.md
@@ -2,7 +2,7 @@
 - **Matriz Nula**: Matriz cuyo todos elementos son ceros.
 - **Matriz Cuadrada**: Matriz que tiene la misma cantidad de filas que columnas.
 	- **Diagonal Principal**: Diagonal formada por los elementos $a_{ij}$ tal que $i = j$.
-	- **Diagonal Menor**: Diagonal formada por los elementos $a_{ij}$ tal que $i + j = n+1$. Es la diagonal opuesta a la mayor.
+	- **Diagonal Menor o Secundaria**: Diagonal formada por los elementos $a_{ij}$ tal que $i + j = n+1$. Es la diagonal opuesta a la mayor.
 	- **Matriz Triangular Superior**: Matriz en la cual todos los elementos que quedan por debajo de la diagonal principal son todos ceros.
 	- **Matriz Triangular Inferior**: Matriz en la cual todos los elementos que quedan por encima de la diagonal principal son todos ceros.
 	- **Matriz Diagonal**: Matriz cuyos elementos que no están en la diagonal principal son ceros.
