Se arreglo una formula de calculo

--- a/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
+++ b/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
@@ -63,7 +63,7 @@ Al contrario que los métodos directos que nos dan un resultado concreto luego d
 
 Si se considera un sistema de ecuaciones algebraicas, que puede escribirse en forma matricial como $A \cdot X = C$ y que $A = D + R$, donde $D$ es una matriz diagonal. Entonces puede escribirse que:
 $$
-(D + R) \cdot X = C \rightarrow DR = C - RX \rightarrow X = D^{-1} \cdot C - D^{-1} \cdot RX
+(D + R) \cdot X = C \rightarrow DX = C - RX \rightarrow X = D^{-1} \cdot C - D^{-1} \cdot RX
 $$
 Para aplicar este método, se considera una primera aproximación al valor de las incógnitas $x$, que se denomina $X^{(0)}$. Se sustituye esa primera aproximación en los demás miembros de la ecuación y así sucesivamente, por ejemplo, en una situación trivial, dado una matriz y teniendo lista la ecuación, todos los $x_i$ pueden ser reemplazados por 0 para obtener la primera aproximación de las incógnitas. El procedimiento se repite hasta que la solución converja cerca de los valores reales, con la diferencia que para la aproximación de primer grado $X^{(1)}$, se utilizaran las anteriores aproximaciones. La convergencia se puede verificar usando el criterio de error relativo.
 
