Acomodando y Completando | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
@@ -1,5 +1,5 @@
-En el nivel de las aplicaciones de usuario existen una amplia variedad de protocolos de red, que se utilizan para diversos motivos, por ejemplo, HTTP para transferir hipertextos o NFS para compartir archivos a través de una red.
-Las principales características que tienen estos protocoles de nivel de aplicación es la siguiente:
+La capa de aplicación es el nivel más cercano al usuario final y maneja todos los procesos específicos de la aplicación que se comunican a través de la red, facilitando una variedad de funcionalidades para que las aplicaciones y servicios interactúen de manera efectiva con el usuario y otras aplicaciones a través de Internet o redes privadas.
+En este nivel existen una amplia variedad de protocolos de red, que se utilizan para diversos motivos, por ejemplo, HTTP para transferir hipertextos o NFS para compartir archivos a través de una red. Las principales características que tienen estos protocoles de nivel de aplicación es la siguiente:
 
 - Implementan modelo cliente-servidor como entorno de trabajo.
 - Son inherentemente distribuidas.
