--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -45,7 +45,7 @@ Además de esta función el DHCP permite que los host accedan a información adi
 DHCP es un protocolo cliente-servidor. Normalmente, un cliente es un host recién llegado que desea obtener información de configuración de la red, incluyendo una dirección IP para sí mismo. En el caso más simple, cada subred tendrá un servidor DHCP. Si en la subred no hay ningún servidor, es necesario un agente de retransmisión DHCP que conozca la dirección de un servidor DHCP para dicha red. Para un host recién llegado a una red, el protocolo DHCP es un proceso de cuatro pasos:
 
 1. **Descubrimiento del servidor DHCP**. La primera tarea de un host recién llegado es encontrar un servidor DHCP con el que interactuar. Esto se hace mediante un mensaje de descubrimiento DHCP, que envía un cliente dentro de un paquete UDP al puerto 67. Para encontrar el servidor el cliente DHCP envia el paquete utilizando la dirección de difusión o broadcast (255.255.255.255) para que el paquete se envíe a toda la red y solo el servidor responda al destinatario.
-2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP, que se difunde a todos los nodos de la subred utilizando nuevamente un mensaje difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación de poder elegir entre varias ofertas. Cada mensaje de oferta de servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
+2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP dentro de otro paquete UDP pero esta vez al puerto 68, este mensaje difunde a todos los nodos de la subred utilizando nuevamente un mensaje difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación de poder elegir entre varias ofertas. Cada mensaje de oferta de servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
 3. **Solicitud DHCP**. El cliente recién llegado seleccionará de entre las ofertas del servidor y responderá a la oferta seleccionada con un mensaje de solicitud DHCP, devolviendo los parámetros de configuración.
 4. **ACK DHCP**. El servidor contesta al mensaje de solicitud DHCP con un mensaje ACK DHCP, que confirma los parámetros solicitados.
 
