--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -1,4 +1,4 @@
->[!example] Definiciones
+>[!tldr] Conceptos Importantes
 >- **Entidad**: Casi cualquier objeto de un sistema distribuido, puede usarse para referirse tanto a archivos, hosts, mailboxes, entre muchas otras. Para poder operar con una entidad se necesita un punto de acceso a esta misma, estos puntos de acceso están formados por la dirección ***IP*** del dispositivo más el número de puerto correspondiente a esa aplicación.
 >- **Nombre**: Cadenas de bits o caracteres que se usan para referirse a las entidades, estas cadenas pueden ser categorizadas es dos grupos:
 >	- Orientadas al Usuario: Es texto que encapsulan la dirección IP del servidor que aloja el servicio, de esta manera el usuario puede recordar con mayor facilidad el nombre del servicio.
@@ -17,7 +17,7 @@ Los DNS son una gran base de datos distribuida que implementa una jerarquía de 
 Al mismo tiempo, DNS se comporta como un protocolo de *capa de aplicación* que le permite a los hosts acceder a esta base de datos. Como protocolo, DNS utiliza una conexión UDP a través del puerto 53.
 La forma en la que este sistema pueden resolver los direccionamientos desde el cliente hacia su correspondiente servidor es mediante una organización jerárquica de los nombres de las URL, a nivel lógico, estos sistemas usan una estructura arbórea, similar a la de los sistemas de archivos de los sistemas operativos, para organizar todos los nombres de dominios, véase la siguiente imagen.
 
-![[DNS-organizacion.png]]
+![[organizacion-dns.png]]
 
 >[!note] Forma de Resolución del Direccionamiento
 >Supongamos que queremos entrar a www.fcad.uner.edu.ar, los DNS empiezan a resolver las URL de atrás hacia adelante, en este caso primero iría a la carpeta ***ar***, a continuación a la carpeta ***edu***, siguiendo con la carpeta ***uner*** y por último se dirigiría al recurso que es ***fcad***.
@@ -80,6 +80,6 @@ Cada partición del espacio de nombres está manejada por un servidor de nombres
 
 Una URL o Localizador Uniforme de Recursos, es una dirección específica utilizada para acceder a recursos en Internet. Puede considerarse como la dirección de una página web o de un archivo en la web. Cada URL tiene dos componentes principales, el nombre del host del servidor y el nombre de la ruta del objeto, tomemos como ejemplo la siguiente URL:
 
-- https://www.fcad.uner.edu.ar/academicas/horarios-de-clase-2024/
+-  https://www.fcad.uner.edu.ar/academicas/horarios-de-clase-2024/
 
 En este caso *www.fcad.uner.edu.ar* es el nombre del host del recurso, en este caso un HTML con muchas imágenes, mientras que */academicas/horarios-de-clase-2024/* es el nombre de la ruta que provee dicho recurso.
