Mas correcciones y acomodos | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -10,7 +10,8 @@ Una red de computadoras es una colección de dispositivos autónomos interconect
 
 - **Uso eficaz del recurso** (exclusivo para una comunicación o compartido por varias, congestión).
 - **Generación de la señal** (transmitir en el emisor e interpretar en el receptor).
-- **Detección y corrección de errores Direccionamiento** (identificación del destino y del origen).
+- **Detección y corrección de errores**.
+- **Direccionamiento** (identificación del destino y del origen).
 - **Encaminamiento** (si existen varias rutas para llegar al destino).
 - **Seguridad** (autenticidad del emisor, integridad datos, confidencialidad, uso autorizado del recurso).
 
@@ -46,7 +47,7 @@ La comunicación entre dos capas pares, en dos máquinas distintas, se hace a tr
 - **Sistema**: Objeto físico que contiene una o más entidades. Por ejemplo: computadoras
 
 >[!example] Ejemplo de Utilización de estas Arquitecturas
->- **Cliente Servidor**: Una parte realiza una petición y la otra responde dicha petición. Un modelo de trabajo muy utilizado en redes es el de *cliente-servidor*.
+>- **Cliente Servidor**: Una parte realiza una petición y la otra responde dicha petición. Este es un modelo de trabajo muy utilizado en redes.
 >- **Peer to Peer**: En general, una red informática entre iguales se refiere a una red que no tiene clientes y servidores fijos, sino una serie de máquinas que se comportan a la vez como clientes y como servidores de los demás nodos de la red.
 
 Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje: ***Protocolo***.
@@ -105,10 +106,5 @@ Las organizaciones de *normalización* definen las características de los equip
 >- Desventajas:
 >	- Tiende a congelar el desarrollo de la tecnología.
 
----
 
-Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
-
->[!note] La Dirección Física - MAC
->La MAC es una dirección de tipo Ethernet de 48 bits, la cual indica exactamente donde está ejecutándose un proceso de forma física.
 
