--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -7,7 +7,7 @@
 ## Sistema de Espacios de Nombres
 
 Los ***Sistemas de Nombre de Dominio (DNS)*** asocian un nombre a una dirección IP, además de ser el encargado de traducir el nombre de dominio de los diferentes hosts a direcciones **IP**, haciendo más sencilla la tarea de direccionamiento que realizan los routers y demás dispositivos que forman parte de la infraestructura de internet.
-Los DNS son una gran base de datos distribuida que implementa una jerarquía de servidores DNS, la decisión de optar por un enfoque descentralizado es debido a los siguientes motivos:
+Los DNS son una gran base de datos distribuida que se organiza de forma jerárquica, la decisión de optar por un enfoque descentralizado es debido a los siguientes motivos:
 
 1. **Un único punto de fallo**. Si el servidor DNS falla, entonces también falla toda la red Internet.
 2. **Volumen de tráfico**. Un único servidor DNS tendría que gestionar todas las consultas DNS que se produzcan en el mundo.
@@ -41,8 +41,7 @@ Los pasos para buscar un recurso con un determinado nombre de dominio es el sigu
 
 #### Resolución de Nombres
 
-Al proceso de buscar un nombre y encontrar una dirección se le conoce como ***resolución de nombres***. Cuando un *resolvedor* tiene una consulta referente a un nombre de dominio, la pasa a uno de los servidores de nombres locales. Si el dominio que se busca está bajo la jurisdicción del servidor de nombres, devuelve los ***registros de recursos autorizados***. Un registro autorizado es uno que proviene de la autoridad que administra a ese registro y, por ende, siempre es correcto. Los registros autorizados contrastan con los ***registros en caché***, que tal vez no estén actualizados.
-La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
+Al proceso de buscar un nombre y encontrar una dirección se le conoce como ***resolución de nombres***. Cuando un *resolvedor* tiene una consulta referente a un nombre de dominio, la pasa a uno de los servidores de nombres locales. Si el dominio que se busca está bajo la jurisdicción del servidor de nombres, devuelve los ***registros de recursos autorizados***. Un registro autorizado es uno que proviene de la autoridad que administra ese registro y, por ende, siempre es correcto. La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
 
 - **Iterativa**: El agente retiene el control sobre el proceso de resolución y llama a cada uno de los servidores de nombres. La consulta comienza por el primer servidor del ***pathname***.
 - **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás servidores de nombres. Esta forma suele ser la más ampliamente usada debido a su eficiencia.
