--- a/4º Año/Comunicaciones y Redes/Unidad 2/3. Cloud Computing.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/3. Cloud Computing.md
@@ -35,7 +35,7 @@ Más allá de esta definición brindada por el NIST, el concepto de Cloud puede 
 
 Si bien existen diferencias entre los diferentes modelos de despliegues, los diferentes tipos de nubes se configuran de manera similar, ya que se usan tecnologías para virtualizar recursos, agregando un sistema de control administrativo a todo el entorno y creando funciones automatizadas de autoservicio. Todas las nubes necesitan un sistema operativo, pero la infraestructura puede incluir varios sistemas con servidor dedicado, de virtualización o de contenedores que extraigan y compartan los recursos adaptables en una red. La confiabilidad y la flexibilidad del sistema operativo determina la solidez de las conexiones entre los recursos físicos, los grupos de datos, el software de gestión, los scripts de automatización y los usuarios. Además de todo eso se debe invertir en conectividad.
 
-- **Nubes Públicas**: Es el más común de los tipos Cloud. Con el modelo de nube pública se ofrecen recursos generalmente para uso por parte del público en general, bajo demanda y de forma inmediata a través de Internet. Puede ser propiedad, administración y operación de una organización comercial, académica o gubernamental, o alguna combinación de ellos. Los recursos subyacentes, hardware y software, y todo lo que corresponde a infraestructura física es propiedad del proveedor, quien se encarga del mantenimiento y la administración. La nube se prepara y se pone a disposición de varios clientes a través de una interfaz de autoservicio de manera automática. Este modelo proporciona a los desarrolladores, administradores de sistemas y las empresas en general, la facilidad de centrarse en los que más importa al negocio, evitando la planificación de capacidad informática, la adquisición y administración de hardware.
+- **Nubes Públicas**: Es el más común de los tipos Cloud. Con el modelo de nube pública se ofrecen recursos generalmente para uso por parte del público en general, bajo demanda y de forma inmediata a través de Internet. La propiedad, administración y operación de una puede ser realizada por una organización comercial, académica o gubernamental, o alguna combinación de ellos. Los recursos subyacentes, hardware y software, y todo lo que corresponde a infraestructura física es propiedad del proveedor, quien se encarga del mantenimiento y la administración. La nube se prepara y se pone a disposición de varios clientes a través de una interfaz de autoservicio de manera automática. Este modelo proporciona a los desarrolladores, administradores de sistemas y las empresas en general, la facilidad de centrarse en los que más importa al negocio, evitando la planificación de capacidad informática, la adquisición y administración de hardware.
 
 >[!example] Ventajas y Desventajas
 >- **Ventajas**:
@@ -47,7 +47,7 @@ Si bien existen diferencias entre los diferentes modelos de despliegues, los dif
 >	- Poca transparencia para el usuario, ya que no se conoce el resto de los servicios que comparten recursos.
 >	- Depende de la seguridad de un tercero.
 
-- **Nube Privada**: Una nube privada es un servicio utilizado únicamente por una institución, la infraestructura siempre se mantiene en una red privada y el hardware y software es dedicado para la propia organización. La infraestructura de la nube para uso exclusivo de una sola organización que puede comprender múltiples consumidores. Puede ser propiedad, ser administrada y operada por la organización, un tercero o alguna combinación de ellos y puede existir dentro o fuera de las instalaciones. Las nubes privadas utilizan la tecnología de virtualización para combinar recursos provenientes del hardware físico en conjuntos compartidos. De esta manera, no es necesario que las nubes creen entornos virtualizando cada recurso por separado a partir de un grupo de sistemas físicos diferentes.
+- **Nube Privada**: Una nube privada es un servicio utilizado únicamente por una institución, la infraestructura siempre se mantiene en una red privada y el hardware y software es dedicado para la propia organización. La infraestructura de la nube para uso exclusivo de una sola organización que puede comprender múltiples consumidores. La propiedad, administración y operación puede realizarse por la organización, un tercero o alguna combinación de ellos y puede existir dentro o fuera de las instalaciones. Las nubes privadas utilizan la tecnología de virtualización para combinar recursos provenientes del hardware físico en conjuntos compartidos. De esta manera, no es necesario que las nubes creen entornos virtualizando cada recurso por separado a partir de un grupo de sistemas físicos diferentes.
 
 >[!example] Ventajas y Desventajas
 >- **Ventajas**:
@@ -59,7 +59,7 @@ Si bien existen diferencias entre los diferentes modelos de despliegues, los dif
 >	- Dependencia de la infraestructura contratada.
 >	- Retorno de inversión lento.
 
-- **Nubes Híbridas**: Es el uso mixto de una nube privada y una nube pública, que se perciben como entidades separadas, pero a la vez, se encuentran unidas por una tecnología estandarizada, facilitando la comunicación, portabilidad de los datos y aplicaciones. La creación de una nube híbrida requiere cierto nivel de portabilidad, organización y gestión de las cargas de trabajo. Las interfaces de programación de aplicaciones (API) y las redes privadas virtuales (VPN) son las formas estándares para crear estas conexiones. Muchos de los principales proveedores de nube incluso ofrecen a los clientes una VPN preconfigurada como parte de sus paquetes de suscripción. Esta tecnología posee tanto las ventajas como las desventajas de los dos modelos.
+- **Nubes Híbridas**: Es el uso mixto de una nube privada y una nube pública, que se perciben como entidades separadas, pero a la vez, se encuentran unidas por una tecnología estandarizada, facilitando la comunicación, portabilidad de los datos y aplicaciones. La creación de una nube híbrida requiere cierto nivel de portabilidad, organización y gestión de las cargas de trabajo. Las interfaces de programación de aplicaciones (API) y las redes privadas virtuales (VPN) son las formas estándares para crear estas conexiones. Esta tecnología posee tanto las ventajas como las desventajas de los dos modelos.
 - **Nube Comunitaria**: La infraestructura en la nube es de uso exclusivo para una determinada comunidad de consumidores, las cuales son organizaciones que tienen preocupaciones compartidas (por ejemplo, misión, requisitos de seguridad, políticas y consideraciones de cumplimiento). Puede ser propiedad, administrada y operada por una o más de las organizaciones en la comunidad, alguna combinación de ellos o un tercero y puede existir dentro o fuera de las instalaciones.
 
 >[!example] Ventajas y Desventajas
