--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -9,14 +9,18 @@ Entre los distintos servicios que nos brindan los protocolos de transporte se en
 2. Comprobación de la integridad de los paquetes (cheksum en headers).
 3. Realizar un direccionamiento usando ***sockets***, las cuales son la unión de la dirección IP más el número de puerto.
 
+>[!tldr] Los Sockets
+> Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
+
 ## Multiplexación y Desmultiplexación
 
-A la hora de enviar datos a través de una red, la capa de transporte recibe los segmentos (PDU) desde la capa de red, y debe entregarlos a los procesos apropiados que corren en los hosts. Por ejemplo: un usuario ejecutando varias aplicaciones (ftp, telnet, http) entonces es necesario direccionar los segmentos a cada uno de los procesos.
-Cada proceso tiene un ***socket*** que es el lugar por donde se reciben y entregan los datos entre la capa de red y la capa de transporte. Puede haber más de un socket abierto, por eso cada socket tiene un identificar único, según sea TCP o UDP.
+A la hora de enviar datos a través de una red, la capa de transporte recibe los segmentos (PDU) desde la capa de red, y debe entregarlos a los procesos apropiados que corren en los hosts. Por ejemplo, un usuario puede ejecutar varias aplicaciones, en ese caso es necesario direccionar los segmentos a cada uno de los procesos correspondientes.
+Cada proceso tiene un ***socket*** por donde se reciben y entregan los datos entre la capa de red y la capa de transporte. En una mismo equipo puede haber más de un socket abierto, por eso cada socket tiene un identificar único, según sea TCP o UDP.
+
 - La *Desmultiplexación* es una tarea realizada por la capa de transporte, en el cual se revisan un conjunto de campos dentro del segmento, con el fin de identificar el socket reseptor.
 - La *Multiplezación* es la tarea que consiste en reunir los distintos paquetes de datos de los distintos sockets para luego crear los segmentos que se pasaran a la capa de red.
 
-Cada uno de los sockets debe tener un identificador único, además, cada segmento debe tener un campo que indique a que socket debe entregarse el segmento. Véase en la imagen un modelo simplificado de segmento:
+Cada uno de los sockets debe tener un identificador único, además, cada segmento debe tener un campo que indique a que puerto debe entregarse el segmento. Véase en la imagen un modelo simplificado de segmento:
 
 ![[redes-segmento.png]]
 
@@ -44,11 +48,11 @@ El Protocolo de Control de Transmisión es uno de los métodos de transferencia 
 >	- ARQ con adelante-atrás N.
 >	- ARQ con rechazo selectivo.
 
-Para establecer una conexión a través de TCP, se lleva a cabo un acuerdo de tres fases entre el emisor y el receptor, en el primera fase el dispositivo cliente envía un segmento TCP con un número aleatorio y la bandera SYN, en la segunda fase el servidor envía otro segmento TCP con la misma bandera de SYN, además de enviar el acuso de recibo o ACK que indica que el mensaje del cliente a sido recibido, por último el cliente envía al servidor un ACK indicando que esta listo para recibir datos por parte del servidor.
+Para establecer una conexión a través de TCP, se lleva a cabo un acuerdo de tres fases entre el emisor y el receptor, en el primera fase el cliente envía un segmento TCP con un número aleatorio y la bandera SYN, en la segunda fase el servidor envía otro segmento TCP con la misma bandera de SYN, además de enviar el acuso de recibo o ACK que indica que el mensaje del cliente a sido recibido, por último el cliente envía al servidor un ACK indicando que esta listo para recibir datos por parte del servidor.
 Este acuerdo es utilizado para establecer una conexión segura y confiable entre dos dispositivos en una red, garantizando que la información se transmita correctamente y en orden.
 
 >[!note] Protocolo de Ventanas Deslizantes
->El protocolo de ventanas deslizantes es un mecanismo de control de flujo que permite la transmisión eficiente y confiable de datos entre un emisor y un receptor. Este protocolo se encarga de gestionar la cantidad de información que puede ser enviada antes de necesitar un acuse de recibo (ACK) por parte del receptor, asegurando así que no se sature la capacidad del receptor ni se pierdan datos en el proceso.
+>El protocolo de ventanas deslizantes es un mecanismo de control de flujo que permite la transmisión eficiente y confiable de datos entre un emisor y un receptor. Este protocolo se encarga de gestionar la cantidad de información que puede ser enviada antes de necesitar un acuse de recibo (ACK) por parte del receptor, asegurando así que no se sature la capacidad del receptor para recibir información y evitando perdidas de datos en el proceso.
 >Entre las principales funciones de este protocolo se encuentra la optimización del ancho de banda, la prevención en la perdida de datos, la adaptación dinámica del tamaño de las ventanas de acuerdo al estado de la red y la fluidez de la comunicación.
 
 ## User Datagram Protocol (UDP)
