--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
@@ -26,12 +26,12 @@ Los protocolos, a muy grandes rasgos, se puede decir que tienen 3 componentes fu
 
 ### Hiper Text Transfer Protocol (HTTP)
 
-Al igual que DNS, el protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde:
+El protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde:
 
 - Los navegadores son los agentes de usuario que recuperan los recursos deseados, facilitando la navegación a través de la web e implementan el lado del cliente del protocolo.
 - Los servidores alojan objetos web direccionables por una URL.
 
-El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte, pudiendo recibir peticiones por el puerto 80. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
+El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte, pudiendo recibir peticiones a través del puerto 80. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
 
 >[!tldr] Conexiones Persistentes y no Persistentes
 >Cuando hablamos del protocolo HTTP, decimos que una ***conexión no es persistente*** si todos los mensajes de solicitud/respuesta para cada objeto se envía a través de distintas conexiones TCP, mientras que decimos que la ***conexión es permanente*** si múltiples mensajes se envían a través de la misma conexión TCP.
@@ -86,13 +86,13 @@ La infraestructura de los correos electrónicos está compuesta, además de por 
 1. Los ***agentes de usuario*** que le permiten a los distintos usuarios leer sus correos electrónicos.
 2. Los ***servidores de correo***, son una pieza central de la infraestructura de correos, en estos servidores se tendrá un buzón de entrada para cada usuario.
 
-Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor, a través del puerto 25, y de allí al servidor de correos del destinatario, si el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
+Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor, a través del puerto 25, y de allí al servidor de correos del destinatario, si el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. SMTP es el protocolo principal utilizado para enviar correos a través de la red, todos los servidores de correos actuales utilizan SMTP de fondo.
 SMTP tiene algunos defectos como el hecho de que todos los encabezados deben estar codificados utilizando ASCII, lo que lo vuelve inseguro, debido a que cualquiera que intercepte la conexión puede leer el encabezado del mensaje, además de ser tedioso a la hora de enviar archivos multimedia, ya que todo debe ser codificado al ASCII. Otro gran problema es que SMTP no utiliza servidores de correos intermedios para realizar los envíos, esto quiere decir que si dos servidores se encuentran geográficamente en dos regiones distintas, la conexión TCP será directa a pesar de lo inconveniente que esto resulta.
 
 ##### Multipurpose Internet Mail Extension (MIME)
 
-Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño y otros códigos, además de ASCII. En su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato deseado. La codificación de los mensajes en MIME se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
-MIME no es un protocolo por si mismo, sino que es una mejora SMTP el cual solo agrega campos extras a los encabezados, lo que le permite enviar una gama más amplia de información. Además de implementar una mayor seguridad utilizando cifrado para sus mensajes.
+Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño y en otros códigos, además de ASCII. En su especificación se definen nuevos campos en la cabecera del mensaje, soporte para nuevos formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato deseado. La codificación de los mensajes en MIME se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
+MIME no es un protocolo por si mismo, sino que es una mejora de SMTP el cual solo agrega campos extras a los encabezados, lo que le permite enviar una gama más amplia de información. Además de implementar una mayor seguridad utilizando cifrado para sus mensajes.
 ##### Protocolos de Acceso al Correo
 
 Existen protocolos especiales de acceso al correo para transferencia de mensajes desde el servidor de correo a la PC local, entre ellos encontramos:
@@ -102,7 +102,7 @@ Existen protocolos especiales de acceso al correo para transferencia de mensajes
 	2. El agente de usuario envía nombre de usuario y contraseña para realizar una autenticación (Fase de Autenticación).
 	3. Se descargan los correo de forma local, los agentes de POP3 suelen ser configurados para descargar y borrar los correos de la bandeja de entrada o descargar y guardar (Fase de Transacción).
 	4. El cliente termina la operación y el servidor se actualiza (Fase de Actualización).
-- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos, que se encuentra en el servidor de correos, como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado, crear distintas carpetas, mover correos a otras carpetas y realizar búsquedas de forma remota. Este protocolo utiliza el puerto 143 para realizar su comunicación.
+- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al buzón de correos, que se encuentra en el servidor de correos, como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado, crear distintas carpetas, mover correos a otras carpetas y realizar búsquedas de forma remota. Este protocolo utiliza el puerto 143 para realizar su comunicación.
 - **HTTP**: Envío y recepción de mensajes a través de HTTP, esto permite utilizar a los navegadores web como agentes de usuario. Aunque varíe la forma de realizar los envíos, en el fondo todos cuando se envía un correo primero va a ir al servidor de correos del emisor y desde allí ser enviado al buzón de correo del servidor de destino.
 
 ### File Transfer Protocol (FTP)
