--- a/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
@@ -1,4 +1,4 @@
-A lo largo de los años, las organizaciones fueron incorporando sistemas de información implementados en diferentes lenguajes de programación y plataformas de software y hardware. Las decisiones respecto a la tecnología de la información han sido generalmente no planificadas y tomadas a nivel de áreas o departamentos funcionales, resultando en infraestructuras heterogéneas y sectorizadas. Los negocios actuales exigen que los sistemas y aplicaciones se integren para brindar un adecuado soporte a los Procesos de Negocios de la organización. En consecuencia, se debe hacer frente a:
+A lo largo de los años, las organizaciones fueron incorporando sistemas de información implementados en diferentes lenguajes de programación y plataformas de software y hardware. Las decisiones respecto a la tecnología de la información han sido generalmente no planificadas y tomadas a nivel de áreas o departamentos funcionales, resultando en infraestructuras heterogéneas y sectorizadas. Los negocios actuales exigen que los sistemas y aplicaciones se integren para brindar un adecuado soporte a los procesos de negocios de la organización. En consecuencia, se debe hacer frente a:
 
 - Heterogeneidad de los sistemas y aplicaciones, ya que las aplicaciones son escritos en diferentes lenguajes de programación, para distintos sistemas operativos y plataformas de hardaware.
 - Infraestructuras sectorizadas y no planificadas (Islas/Silos de TI).
@@ -6,8 +6,7 @@ A lo largo de los años, las organizaciones fueron incorporando sistemas de info
 - Brecha entre los procesos de negocios y los sistemas de información.
 - Elevada complejidad y altos costos de mantenimiento e integración.
 
-Se requiere de una arquitectura adaptable y de bajo costo, que considere a la empresa como un todo y responda con velocidad y flexibilidad a los cambios en los negocios y las tecnologías, facilitando la integración de aplicaciones existentes y futuras, así como el desarrollo de nuevas aplicaciones.
-Dentro de este contexto, la arquitectura orientada a servicios (SOA) es una arquitectura de aplicaciones donde todas las funcionalidades de negocios son expuestas como servicios independientes e invocables que pueden ser llamados en una secuencia determinada para construir procesos de negocios. Se modela la empresa como una colección de servicios expuestos en la red e intenta concebir la arquitectura no desde el punto de vista de aplicaciones o sistemas particulares, sino tomando la empresa como una unidad, donde toda función de negocios es expuesta como un servicio y puede ser accedida o invocada por otros servicios o aplicaciones. De este modo, las aplicaciones no se desarollan desde cero, sino que se construyen como resultado de una combinación o integración particular de distintos servicios publicados por múltiples proveedores.
+Dentro de este contexto, la arquitectura orientada a servicios (SOA) es una arquitectura de aplicaciones donde todas las funcionalidades de negocios son expuestas como servicios independientes e invocables que pueden ser llamados en una secuencia determinada para construir procesos de negocios. Se modela la empresa como una colección de servicios expuestos en la red, de este modo, las aplicaciones no se desarrollan desde cero, sino que se construyen como resultado de una combinación o integración particular de distintos servicios publicados por múltiples proveedores.
 SOA puede dividirse en distintos modelos de arquitectura, cada uno de los cuales representa una capa o abstracción lógica diferente:
 
 - **Modelo Arquitectónico de Negocio**: Se refiere al sistema como una combinación de servicios de alto nivel, de granularidad gruesa, que proporcionan algún valor de negocio.
@@ -22,16 +21,10 @@ SOA puede dividirse en distintos modelos de arquitectura, cada uno de los cuales
 Una Arquitectura Orientada a Servicios básica utiliza un patrón de cliente-servidor que se comunican mediante el intercambio de mensajes que pueden ser comprendidos por ambas partes. Como un sistema de software distribuido, promueve una arquitectura corporativa basada en **roles** y **operaciones**. Dentro de esos roles encontramos:
 
 - **Consumidor de Servicios**: Es una aplicación, módulo de software o servicio que requiere invocar la funcionalidad de otro servicio, por ejemplo: aplicaciones de usuarios finales, sistemas internos, entre otros.
-- **Proveedor de Servicios**: Es una entidad direccionable en la red que acepta y ejecuta requerimientos de los consumidores.
+- **Proveedor de Servicios**: Es una entidad direccionable en la red que acepta y ejecuta requerimientos de los consumidores. Aloja una serie de servicios que pueden ser consumidos por los clientes.
 - **Registro de Servicios**: Es una entidad que actúa como un directorio que contiene descripciones de servicios y que permite que los consumidores encuentren los servicios disponibles.
 
-Por el lado de las operaciones encontramos:
-
-- **Publicar**: El proveedor describe formalmente el servicio y almacena dicha descripción en un registro. Facilita el descubrimiento e invocación de servicios por parte de los consumidores.
-- **Encontrar**: Los consumidores consultan los registros para hallar descripciones de servicios y seleccionar aquellos que satisfagan sus requerimientos de negocios. La selección puede ser manual o por medio de intermediarios (brokers).
-- **Ligar**: Los consumidores utilizan las descripciones publicadas por el proveedor para ligarse al servicio e invocar las operaciones deseadas.
-
-Los servicios comparten un contrato formal que establece cuáles son las funcionalidades que un servicio provee y como se debe invocar al mismo, separando la interfaz accesible externamente de la implementación técnica. Estas descripciones se deben especificar en una forma estándar que favorezca el bajo acoplamiento y la interoperabilidad. Un contrato de servicios provee una definición formal de:
+Los servicios comparten un contrato formal que establece cuáles son las funcionalidades que un servicio provee y como se debe invocar al mismo, separando la interfaz de la implementación técnica. Estas descripciones se deben especificar en una forma estándar que favorezca el bajo acoplamiento y la interoperabilidad. Un contrato de servicios provee una definición formal de:
 
 1. Ubicación del servicio.
 2. Cada operación que provee el servicio.
@@ -43,7 +36,8 @@ Además, debería incluir información semántica que facilite la selección del
 >[!tldr] Definición de Servicio en el contexto del SOA
 >Un servicio es un activo informático que se corresponde con una función o paso de un proceso de negocio y que puede ser invocado de acuerdo a ciertas políticas de servicios que se han definido para el mismo.
 
-Los servicios exponen su interfaz a otros servicios que los requieren y ocultan a estos los detalles internos de su implementación, actuando como cajas negras. Los servicios en la arquitectura orientada a servicios son invocables, lo que significa que pueden ser requeridos a través de la red por otros servicios, tanto internos como externos a la organización. Un servicio consiste en una o más operaciones que pueden estar implementadas utilizando distintas tecnologías. La interfaz pública del servicio oculta los detalles de implementación a los consumidores. En el contexto de SOA los servicios comparten las siguientes características:
+Los servicios exponen su interfaz a otros servicios que los requieren y ocultan a estos los detalles internos de su implementación, actuando como cajas negras. Un servicio consiste en una o más operaciones que pueden estar implementadas utilizando distintas tecnologías. En el contexto de SOA los servicios comparten las siguientes características:
+
 - Son autónomos y autocontenidos.
 - Comparten un contrato formal.
 - Son bajamente acoplados.
@@ -87,8 +81,8 @@ Niveles de calidad de servicio:
 
 ### Servicios Web
 
-Un servicio web es una aplicación de software que utiliza XML y que interactúa en una forma estándar con otras aplicaciones a través de una red. Son funcionalidades expuestas por una organización o programa de software, y que pueden ser descubiertos y accedidos por otros programas de software u organizaciones que requieren de dichos servicios. Un servicio web representa una funcionalidad de negocios discreta que puede ser de valor para muchas organizaciones.
-Los servicios web proporcionan un modelo de computación distribuida para la integración de aplicaciones extremadamente heterogéneas sobre una red. Las especificaciones de servicios web son completamente independientes de los lenguajes de programación, sistemas operativos y plataformas de hardware para permitir un bajo acoplamiento entre los consumidores y los proveedores de servicios. Algunas características fundamentales de los servicios web incluyen:
+Un servicio web es una aplicación de software que utiliza XML y que interactúa en una forma estándar con otras aplicaciones a través de una red. Son funcionalidades expuestas por una organización o programa de software, y que pueden ser descubiertos y accedidos por otros programas u organizaciones que requieren de dichos servicios. Un servicio web representa una funcionalidad de negocios discreta que puede ser de valor para muchas organizaciones.
+Los servicios web proporcionan un modelo de computación distribuida para la integración de aplicaciones extremadamente heterogéneas sobre una red. Las especificaciones de servicios web son completamente independientes de los lenguajes de programación, sistemas operativos y plataformas de hardware. Algunas características fundamentales de los servicios web incluyen:
 
 - Son autocontenidos.
 - Son autodescriptivos.
@@ -98,9 +92,9 @@ Los servicios web proporcionan un modelo de computación distribuida para la int
 - Están basados en estándares abiertos de Internet.
 - Pueden componerse.
 
->[!note] Conclusiones
->SOA define una arquitectura de sistemas independiente de los lenguajes de programación, sistemas operativos y plataformas de hardware y software, que permite responder con flexibilidad y velocidad a las cambios en los negocios y las tecnologías.
->La orientación a servicios es una evolución de algunos principios y prácticas del diseño de software que han sido utilizados desde hace casi 20 años. Sin embargo, SOA pretende cambiar el enfoque respecto de la forma tradicional de definir los sistemas empresariales, a fin de reducir la brecha existente entre el negocio y las tecnologías de información.
+>[!tldr] Conclusiones
+>SOA define una arquitectura de sistemas independiente de los lenguajes de programación, sistemas operativos y plataformas de hardware, que permite responder con flexibilidad y velocidad a las cambios en los negocios y las tecnologías.
+>La orientación a servicios es una evolución de algunos principios y prácticas del diseño de software. Sin embargo, SOA pretende cambiar el enfoque respecto de la forma tradicional de definir los sistemas empresariales, a fin de reducir la brecha existente entre el negocio y las tecnologías de información.
 >Las tecnologías de Servicios Web definen un modelo de computación distribuida que facilita la integración de sistemas altamente heterogéneos a través de Internet, gracias a la utilización de estándares abiertos como XML, HTTP, SOAP, y WSDL, entre otros.
 >Algunos de los principales objetivos de SOA tales como el bajo acoplamiento entre proveedores y consumidores de servicios, amplia interoperabilidad, independencia respecto de lenguajes de programación y plataformas de hardware/software pueden ser alcanzados en base al uso de estas tecnologías. En consecuencia, los Servicios Web se convierten en una alternativa válida para implementar soluciones basadas en SOA.
 
